<resources>
    <string name="app_name">LPB PDA V2</string>
    <string name="nik">NIK</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="loading">Loading, Please Wait</string>
    <string name="version">V.1.0.0</string>
    <string name="srtJalan">Surat Jalan</string>
    <string name="cariSrtJln">Cari Surat Jalan</string>
    <string name="cari">cari</string>
    <string name="cari2">Pilih Surat Jalan untuk memulai scan barang</string>
    <string name="srtJalan2">Surat Jalan \:</string>
    <string name="faktur">Faktur \:</string>
    <string name="faktur2">Faktur</string>
    <string name="totalFaktur">Total faktur \:</string>
    <string name="totalFaktur2">Total Faktur</string>
    <string name="tglPo">Tanggal PO \:</string>
    <string name="status">Status \:</string>
    <string name="status2">Status</string>
    <string name="scan">Scan Items</string>
    <string name="jmlPO">Jumlah PO \:</string>
    <string name="listPO">List PO</string>
    <string name="viewPO">View PO</string>
    <string name="listRack">List Rack</string>
    <string name="listPlu">List PLU</string>
    <string name="rack">Rack \:</string>
    <string name="rack2">Rack</string>
    <string name="pilihSatuan">Pilih Satuan</string>
    <string name="pcs">PCS</string>
    <string name="karton">KARTON</string>
    <string name="slove">SLOVE</string>
    <string name="scanBarcode">Scan barcode disini</string>
    <string name="plu">PLU</string>
    <string name="plu2">PLU \:</string>
    <string name="descp">DESCP</string>
    <string name="descp2">DESCP \:</string>
    <string name="qty">QTY</string>
    <string name="qtyScan">Qty Scan</string>
    <string name="qtyShip">Qty ship</string>
    <string name="flag">FLAG</string>
    <string name="finish">Final</string>
    <string name="clear">clear</string>
    <string name="save">SAVE</string>
    <string name="qtys">QTY sebelumnya \:</string>
    <string name="dcid">DC ID</string>
    <string name="viewDet">View Detail</string>
    <string name="storeid">STORE ID</string>
    <string name="container">Container</string>
    <string name="container2">Container \:</string>
    <string name="sContainer">scan container</string>
    <string name="lContainer">list container</string>
    <string name="pContainer">pilih container</string>
    <string name="lfakturpo">List Faktur PO</string>
    <string name="all">ALL</string>
    <string name="finalDet">Final Detail</string>
    <string name="finalisasi">Finalisasi</string>
    <string name="selisih">Item Selisih/Belum Scan</string>
    <string name="next">Next</string>
    <string name="pilKet">Pilih Keterangan</string>
    <string name="cancel">Cancel</string>
    <string name="qtyCon">Input Qty Kontainer</string>
    <string name="konKuning">Input Kontainer Kuning</string>
    <string name="konMerah">Input Kontainer Merah</string>
    <string name="konMini">Input Kontainer Mini</string>
    <string name="konKuning2">Kontainer Kuning</string>
    <string name="konMerah2">Kontainer Merah</string>
    <string name="konMini2">Kontainer Mini</string>
    <string name="ok">OK</string>

</resources>