<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanSelisihActivity"
    android:background="@drawable/bg_main2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/finalDet"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_margin="10dp">
        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selisih"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical">
                    <HorizontalScrollView
                        android:id="@+id/ll01"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/ll011"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:textStyle="bold"
                                    android:text="@string/srtJalan"
                                    android:gravity="center_vertical|center"
                                    android:background="@android:color/holo_blue_dark"
                                    android:textColor="@android:color/white"/>
                                <TextView
                                    android:layout_marginStart="1dp"
                                    android:layout_width="100dp"
                                    android:layout_height="30dp"
                                    android:textStyle="bold"
                                    android:text="@string/container"
                                    android:gravity="center_vertical|center"
                                    android:background="@android:color/holo_blue_dark"
                                    android:textColor="@android:color/white"/>
                                <TextView
                                    android:layout_marginStart="1dp"
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:textStyle="bold"
                                    android:text="@string/faktur2"
                                    android:gravity="center_vertical|center"
                                    android:background="@android:color/holo_blue_dark"
                                    android:textColor="@android:color/white"/>
                                <TextView
                                    android:layout_marginStart="1dp"
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:textStyle="bold"
                                    android:text="@string/plu"
                                    android:gravity="center_vertical|center"
                                    android:background="@android:color/holo_blue_dark"
                                    android:textColor="@android:color/white"/>
                                <TextView
                                    android:layout_marginStart="1dp"
                                    android:layout_width="150dp"
                                    android:layout_height="30dp"
                                    android:textStyle="bold"
                                    android:text="@string/descp"
                                    android:gravity="center_vertical|center"
                                    android:background="@android:color/holo_blue_dark"
                                    android:textColor="@android:color/white"/>
                                <TextView
                                    android:layout_marginStart="1dp"
                                    android:layout_width="70dp"
                                    android:layout_height="30dp"
                                    android:textStyle="bold"
                                    android:text="@string/qtyScan"
                                    android:gravity="center_vertical|center"
                                    android:background="@android:color/holo_blue_dark"
                                    android:textColor="@android:color/white"/>
                                <TextView
                                    android:layout_marginStart="1dp"
                                    android:layout_width="70dp"
                                    android:layout_height="30dp"
                                    android:textStyle="bold"
                                    android:text="@string/qtyShip"
                                    android:gravity="center_vertical|center"
                                    android:background="@android:color/holo_blue_dark"
                                    android:textColor="@android:color/white"/>
                            </LinearLayout>
                        </LinearLayout>
                    </HorizontalScrollView>
                </ScrollView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <Button
                    android:id="@+id/BtnClear"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_yellow"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/cancel"
                    android:textSize="14sp"
                    android:layout_marginEnd="30dp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>
                <Button
                    android:id="@+id/BtnFinish"
                    android:layout_width="140dp"
                    android:layout_height="40dp"
                    android:background="@drawable/button_blue"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:text="@string/next"
                    android:textSize="14sp"
                    style="?android:attr/buttonBarButtonStyle">
                </Button>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLProgress"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_lay">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            app:lottie_autoPlay="true"
            app:lottie_fileName="9965-loading-spinner.json"
            app:lottie_loop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginTop="5dp">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>