<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalisasiActivity"
    android:background="@drawable/bg_main2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/finalisasi"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_margin="10dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/srtJalan2"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:id="@+id/TVSrtJln"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:background="@drawable/bg_lay2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/jmlPO"
                android:textStyle="bold"
                android:textColor="@color/black">
            </TextView>
            <TextView
                android:id="@+id/TVJmlPO"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">
            </TextView>
            <Button
                android:id="@+id/BtnListPo"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/button_blue"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/viewPO"
                android:textSize="14sp">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:background="@drawable/bg_lay2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/pilKet"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center"
                android:layout_gravity="center">
            </TextView>
            <Spinner
                android:id="@+id/SPKet"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="20dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:background="@android:color/darker_gray">
                <HorizontalScrollView
                    android:id="@+id/ll01"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/ll015"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:textStyle="bold"
                                android:text="@string/faktur2"
                                android:gravity="center_vertical|center"
                                android:background="@android:color/holo_blue_dark"
                                android:textColor="@android:color/white"
                                android:layout_marginEnd="1dp"/>
                            <TextView
                                android:layout_width="100dp"
                                android:layout_height="30dp"
                                android:textStyle="bold"
                                android:text="@string/plu"
                                android:gravity="center_vertical|center"
                                android:background="@android:color/holo_blue_dark"
                                android:textColor="@android:color/white"
                                android:layout_marginEnd="1dp"/>
                            <TextView
                                android:layout_marginEnd="1dp"
                                android:layout_width="200dp"
                                android:layout_height="30dp"
                                android:textStyle="bold"
                                android:text="@string/descp"
                                android:gravity="center_vertical|center"
                                android:background="@android:color/holo_blue_dark"
                                android:textColor="@android:color/white"/>
                            <TextView
                                android:layout_marginEnd="1dp"
                                android:layout_width="50dp"
                                android:layout_height="30dp"
                                android:textStyle="bold"
                                android:text="@string/qty"
                                android:gravity="center_vertical|center"
                                android:background="@android:color/holo_blue_dark"
                                android:textColor="@android:color/white"/>
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:gravity="center">
            <Button
                android:id="@+id/BtnOk"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:background="@drawable/button_blue"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/ok"
                android:textSize="14sp"
                style="?android:attr/buttonBarButtonStyle">
            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLProgress"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_lay">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            app:lottie_autoPlay="true"
            app:lottie_fileName="9965-loading-spinner.json"
            app:lottie_loop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginTop="5dp">
        </TextView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>