<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:orientation="vertical"
    android:background="@drawable/bg_lay"
    android:layout_margin="10dp"
    android:id="@+id/LLSrtJln">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/srtJalan2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold">
        </TextView>
        <TextView
            android:id="@+id/TVSrtJln"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/srtJalan"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold">
        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faktur"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/TVFaktur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srtJalan"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalFaktur"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold">
            </TextView>
            <Button
                android:id="@+id/BtnTotal"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                android:textSize="10sp"
                android:text="@string/viewDet"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:background="@drawable/button_yellow">

            </Button>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tglPo"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/TVTglPo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srtJalan"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/TVStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/srtJalan"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="normal">
            </TextView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>