<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FakturActivity"
    android:background="@drawable/bg_main2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/srtJalan"
            android:textStyle="bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_margin="10dp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <EditText
                android:id="@+id/ETCariSrtJln"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="7"
                android:background="@android:drawable/edit_text"
                android:hint="@string/cariSrtJln"
                android:gravity="center"
                android:singleLine="true"
                android:textSize="14sp"
                android:textStyle="normal"
                android:textColor="@color/black"
                android:inputType="text"
                android:selectAllOnFocus="true">
            </EditText>
            <Button
                android:id="@+id/BtnSrtJln"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="3"
                android:background="@drawable/button_blue"
                android:layout_marginStart="20dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/cari"
                android:textSize="14sp">
            </Button>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/cari2"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVSrtJln"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LLProgress"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bg_lay">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            app:lottie_autoPlay="true"
            app:lottie_fileName="9965-loading-spinner.json"
            app:lottie_loop="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:layout_marginTop="5dp">
        </TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>